--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Debug
 .vs/Algorithms/v15/Browse.VC.db
 .vs/Algorithms/v15/Browse.VC.db
 .vs/Algorithms/v15/Solution.VC.db
+.vs/Algorithms/v15/.suo
+.vs/Algorithms/v15/Browse.VC.db
